--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="col-xl-12">
           <h1 class="header__title">Web development project</h1>
           <p class="header__text">Very suitable to support all web development projects</p>
-          <button class="button button_empty">Our services</button>
-          <button class="button button_full">Hire is now</button>
+          <button class="button">Our services</button>
+          <button class="button">Hire is now</button>
         </div>
       </div>
     </div>
@@ -68,6 +68,81 @@
           <h3 class="about_h3">Fully Responsive</h3>
           <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
         </div>
+      </div>
+    </div>
+  </section>
+  <section class="services">
+    <div class="container">
+      <div class="row">
+        <div class="row justify-content-center">
+          <div class="col-xl-8">
+            <h1 class="about__title">Our Services</h1>
+            <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+          </div>
+         </div>
+      </div>
+      <div class="row">
+        <div class="col-xl-4">
+          <div class="our_card">
+              <i class="fas fa-mobile-alt icon"></i>
+              <h3 class="about_h3">One Page</h3>
+              <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+              <button class="button-services">Read more</button>
+          </div>
+        </div> 
+        <div class="col-xl-4">
+            <div class="our_card">
+                <i class="fas fa-mobile-alt icon"></i>
+                <h3 class="about_h3">One Page</h3>
+                <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+                <button class="button-services">Read more</button>
+            </div>
+        </div>
+        <div class="col-xl-4">
+            <div class="our_card">
+                <i class="fas fa-mobile-alt icon"></i>
+                <h3 class="about_h3">One Page</h3>
+                <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+                <button class="button-services">Read more</button>
+            </div>
+        </div>
+        <div class="col-xl-4">
+            <div class="our_card">
+                <i class="fas fa-mobile-alt icon"></i>
+                <h3 class="about_h3">One Page</h3>
+                <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+                <button class="button-services">Read more</button>
+            </div>
+          </div> 
+          <div class="col-xl-4">
+              <div class="our_card">
+                  <i class="fas fa-mobile-alt icon"></i>
+                  <h3 class="about_h3">One Page</h3>
+                  <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+                  <button class="button-services">Read more</button>
+              </div>
+          </div>
+          <div class="col-xl-4">
+              <div class="our_card">
+                  <i class="fas fa-mobile-alt icon"></i>
+                  <h3 class="about_h3">One Page</h3>
+                  <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+                  <button class="button-services">Read more</button>
+              </div>
+          </div>
+      </div>
+    </div>
+  </section>
+  <section class="portfolio">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-xl-8">
+          <h1 class="about__title">Latest works</h1>
+          <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+        </div>
+       </div>
+      <div class="row">
+
       </div>
     </div>
   </section>
